# RocketEngine

./: Cargo.toml  EDITOR_FEATURES.md  EDITOR_README.md  PR_DESCRIPTION.md  PR_SCENE_SYSTEM.md  QUERY_SYSTEM.md  README.md
scenes/: README.md  example_scene.json  example_scene.ron
src/: editor.rs  lib.rs  main.rs  main_rapier.rs  scene.rs  world.rs
src/components/: atlas.rs  mod.rs  position.rs  sprite.rs  texture.rs  texture_sprite.rs  velocity.rs
src/systems/: input.rs  mod.rs  movement.rs  physics.rs  query.rs  render.rs  scheduler.rs  sync.rs
