[package]
name = "rocket_engine"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A modular 2D game engine built with Rust and powered by Rapier2D physics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jfcarocota/RocketEngine"
keywords = ["game", "engine", "2d", "physics", "ecs"]
categories = ["game-engines", "graphics"]

[lib]
name = "rocket_engine"
path = "src/lib.rs"

[[bin]]
name = "rocket_engine"
path = "src/main.rs"

[[bin]]
name = "editor"
path = "src/bin/editor.rs"

[dependencies]
minifb = "0.27"
winit = "0.30.12"
image = "0.25"
rapier2d = "0.22"
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
egui = "0.29"
eframe = "0.29"
rfd = "0.15"  # For file dialogs
uuid = { version = "1.0", features = ["v4"] }
env_logger = "0.11"




